--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,18 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/security.html
 security:
+    encoders:
+            Symfony\Component\Security\Core\User\User: plaintext
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    admin:
+                        password: 1234
+                        roles: 'ROLE_ADMIN'
+
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,7 +21,21 @@ security:
             security: false
 
         main:
+            pattern: ^/
             anonymous: ~
+            provider: in_memory
+            form_login:
+                login_path: security_login
+                check_path: security_login
+            logout:
+                path: /logout
+                target: security_login
+
+    access_control:
+          - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/, roles: ROLE_ADMIN }
+
+
             # activate different ways to authenticate
 
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
