--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 admin_web_mail:
     resource: "@AdminWebMailBundle/Resources/config/routing.yml"
     prefix:   /
+
+api_rest:
+    type:     rest
+    resource: AdminWebMailBundle\Controller\RestController
