--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/rest-bundle": "@stable",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "@stable",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.0.2",
