CHanges on entitys

--- a/src/AdminWebMailBundle/Resources/config/routing.yml
+++ b/src/AdminWebMailBundle/Resources/config/routing.yml
@@ -8,3 +8,15 @@ security_logout:
 admin_web_mail_homepage:
     path:     /
     defaults: { _controller: AdminWebMailBundle:Main:index }
+
+get_users:
+    path:     /get/users
+    defaults: { _controller: AdminWebMailBundle:Main:getUsersJSON }
+
+get_domains:
+    path:     /get/domains
+    defaults: { _controller: AdminWebMailBundle:Main:getDomainsJSON }
+
+get_aliases:
+    path:     /get/aliases
+    defaults: { _controller: AdminWebMailBundle:Main:getAliasesJSON }
