--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 admin_web_mail:
     resource: "@AdminWebMailBundle/Resources/config/routing.yml"
     prefix:   /
+
+admin_web_mail_users:
+    resource: "@AdminWebMailBundle/Resources/config/routing_users.yml"
+    prefix:   /users/
