--- a/src/AdminWebMailBundle/Resources/config/routing_users.yml
+++ b/src/AdminWebMailBundle/Resources/config/routing_users.yml
@@ -1,7 +1,7 @@
 get_users:
     path:     /get
     methods:  [GET]
-    defaults: { _controller: AdminWebMailBundle:Main:getUsersJSON }
+    defaults: { _controller: AdminWebMailBundle:User:getUsersJSON }
 
 add_users:
     path:     /add
