--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,17 +3,13 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     database_host: 127.0.0.1
-    database_port: ~
-    database_name: symfony
+    database_port: null
+    database_name: servermail
     database_user: root
-    database_password: ~
-    # You should uncomment this if you want to use pdo_sqlite
-    #database_path: "%kernel.root_dir%/data.db3"
-
+    database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: ~
-    mailer_password: ~
-
-    # A secret key that's used to generate certain security-related tokens
+    mailer_user: null
+    mailer_password: null
     secret: ThisTokenIsNotSoSecretChangeIt
+    saltpassword: SaltPassword
